--- a/index.html
+++ b/index.html
@@ -17,10 +17,17 @@
         <p>Player 1</p>
         <p>Symbol: X</p>
       </div>
-        <!-- 
-          Make a board (class .board) with fields (class .field)
-          Do not forget to add styling (grid layout)
-        -->
+      <div class="tic-tac-toe-board board">
+        <div class="box field">X</div>
+        <div class="box field">O</div>
+        <div class="box field">X</div>
+        <div class="box field">O</div>
+        <div class="box field">X</div>
+        <div class="box field">O</div>
+        <div class="box field">X</div>
+        <div class="box field">O</div>
+        <div class="box field">O</div>
+      </div>
       <div>
         <p>player 2</p>
         <p>Symbol: O</p>
